--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "michelf/php-markdown": "^1.7",
-        "michelf/php-smartypants": "1.6.0-beta1",
-        "dflydev/apache-mime-types": "^1.0"
+        "michelf/php-smartypants": "^1.8",
+        "dflydev/apache-mime-types": "^1.0",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
